sjeng/use_undefined_identifier/c0/calc_attackers
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/calc_attackers/src/attacks.c:497:8: error: use of undeclared identifier 'calc_attackers_rook_o'
a_sq = calc_attackers_rook_o[i] + square; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/calc_attackers/src/attacks.c:512:9: error: use of undeclared identifier 'calc_attackers_rook_o'
a_sq += calc_attackers_rook_o[i]; 
        ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/calc_attackers/src/attacks.c:517:9: error: use of undeclared identifier 'calc_attackers_bishop_o'
a_sqa = calc_attackers_bishop_o[ia] + square; 
        ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/calc_attackers/src/attacks.c:537:10: error: use of undeclared identifier 'calc_attackers_bishop_o'
a_sqa += calc_attackers_bishop_o[ia]; 
         ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/calc_attackers/src/attacks.c:542:12: error: use of undeclared identifier 'calc_attackers_knight_o'
if ( board[calc_attackers_knight_o[ib] + square] == 3 ) 
           ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/calc_attackers/src/attacks.c:550:9: error: use of undeclared identifier 'calc_attackers_rook_o'
a_sqb = calc_attackers_rook_o[ic] + square; 
        ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/calc_attackers/src/attacks.c:565:10: error: use of undeclared identifier 'calc_attackers_rook_o'
a_sqb += calc_attackers_rook_o[ic]; 
         ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/calc_attackers/src/attacks.c:570:9: error: use of undeclared identifier 'calc_attackers_bishop_o'
a_sqc = calc_attackers_bishop_o[id] + square; 
        ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/calc_attackers/src/attacks.c:590:10: error: use of undeclared identifier 'calc_attackers_bishop_o'
a_sqc += calc_attackers_bishop_o[id]; 
         ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/calc_attackers/src/attacks.c:595:12: error: use of undeclared identifier 'calc_attackers_knight_o'
if ( board[calc_attackers_knight_o[ie] + square] == 4 ) 
           ^
10 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/calc_attackers/src/obj/attacks.o] Error 1
